--- a/client/src/index.css
+++ b/client/src/index.css
@@ -84,6 +84,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
+  font-family: 'Raleway', sans-serif !important;
   font: inherit;
   vertical-align: baseline;
 }
@@ -113,9 +114,9 @@ body {
 
   background: #ece9e6;
   /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #ece9e6, #ffffff);
+  background: -webkit-linear-gradient(to left, #ece9e6, #ffffff);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #ece9e6, #ffffff);
+  background: linear-gradient(to left, #ece9e6, #ffffff);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
@@ -155,17 +156,29 @@ p {
 
 h1 {
   font-size: 3rem !important;
+  font-family: 'Lobster Two', sans-serif !important;
+
 }
 
 h2 {
+  font-family: 'Raleway', sans-serif !important;
   font-size: 2.4rem !important;
+  color: rgba(0, 0, 0, .5) !important;
+  font-weight: 700 !important;
+  opacity: .5 !important;
 }
 
 h3 {
+  font-family: 'Lobster Two', sans-serif !important;
   font-size: 2rem !important;
+  color: rgba(0, 0, 0, .5) !important;
+  font-weight: 700 !important;
+  letter-spacing: 5px !important;
+  opacity: .5 !important;
 }
 
 h4 {
+  font-family: 'Lobster Two', sans-serif !important;
   font-size: 1.6rem !important;
 }
 
